2009-04-12  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: OCI8::BLOB#read should return ASCII-8BIT.
	    OCI8::BLOB#write should not convert the specified string
	    to OCI8.encoding.
	* test/test_dbi.rb: suppress warning: "shadowing outer local
	    variable - i"
	* test/test_all.rb, test/test_encoding.rb: add string encoding
	    tests.

2009-04-12  KUBO Takehiro  <kubo@jiubao.org>
	* lib/dbd/OCI8.rb: fix DBI::DBD::OCI8::BindType::DBIStatementHandle
	    to pass a newly added sanity check in dbi 0.4.1.
	    (reported by Dirk Herzhauser)
	* test/test_all.rb: fix to use dbi installed as a rubygem.

2009-04-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: fix an error when executing "select NULL from dual".
	    http://rubyforge.org/forum/forum.php?thread_id=32468&forum_id=1078
	    (contributed by Raimonds Simanovskis)

2009-03-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/oraconf.rb:
	    fix a problem when compiling with Oracle 8.0.
	    (reported by Axel Reinhold)

2009-03-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h: fix a problem when
	    compiling with Oracle 9.2.
	    (reported by Axel Reinhold)
	* ext/oci8/apiwrap.yml: suppres warnings 'discards qualifiers
	    from pointer target type' when compiling with Oracle 8i.

2009-03-17  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add a new file.
	* VERSION: change version to 2.0.1.
	* Makefile: add targets to make a binary gem for Windows.
	* dist-files: add NEWS
	* ext/oci8/extconf.rb, lib/oci8.rb.in: rename oci8lib.so
	    to oci8lib_18.so and oci8lib_191.so. The renamed name
	    depends on the ruby version.
	* lib/oci8/datetime.rb: fix the fetched type for date column
	    when using Oracle 8.x.
	* ruby-oci8.gemspec: fix to make a binary gem which contains
	    both oci8lib_18.so and oci8lib_191.so.

2009-03-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml: add prototypes for OCIServerVersion() and